<resources>
    <string name="app_name">Banco de alimentos</string>
    <string name="btnRegister">Register</string>
    <string name="btnLogin">Login</string>
    <string name="inputEmail">Email</string>
    <string name="inputPass">Password</string>
    <string name="iconLog">Icon App Login</string>
    <string name="valid">Valid Email</string>
    <string name="invalid">Invalid Email</string>
    <string name="cancel">Cancel</string>
    <string name="User">Username</string>
    <string name="Name">Name</string>
    <string name="LastName">Last Name</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="send_notification">Send Notification</string>
    <string name="user_name">User Name</string>
    <string name="user_value">----------</string>
    <string name="rol">Rol</string>
    <string name="rol_value">----------</string>
    <string name="logout">Logout</string>
    <string name="user_name_user">User Name</string>
    <string name="logoutUser">Logout User</string>
    <string name="user_value_user">----------</string>
    <string name="rol_user">Rol</string>
    <string name="rol_value_user">----------</string>
    <string name="welcome">Welcome</string>
    <string name="food_bank">Food Bank</string>
    <string name="news">News</string>
</resources>
